--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "browser-remote",
+  "name": "devtools-server",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
@@ -8,7 +8,7 @@
     "stats": "node src/stats.js",
     "test": "standard"
   },
-  "author": "",
+  "author": "and80506@163.com",
   "license": "MIT",
   "devDependencies": {
     "standard": "^3.0.0"
@@ -16,9 +16,9 @@
   "dependencies": {
     "express": "^4.12.3",
     "guid": "0.0.12",
-    "node-uuid": "^1.4.7",
     "request": "^2.67.0",
     "socket.io": "^1.3.5",
+    "uuid": "^8.3.2",
     "winston": "^1.0.0",
     "ws": "yarax/ws"
   }
