--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devtools-server",
+  "name": "woodpecker-remote-server",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
